--- a/html/forest.html
+++ b/html/forest.html
@@ -18,7 +18,7 @@
 <body>
 
 	<header>
-		<div class="head-container">
+		<div class="container">
 			<span class="nav-link theme-toggle">
 				<i class="fa-solid fa-sun"></i>
 				<i class="fa-solid fa-moon"></i>
@@ -53,47 +53,49 @@
 
 	<main>
 		<section class="contact">
-			<div class="main-container">
-				<!-- Игра A* -->
-				<div class="left__map">
-					<div class="box__myCanvas">
+			<div class="container">
 
-					</div>
-				</div>
+				<div class="left"></div>
+				<div class="right">
 
-				<!-- Форма -->
-				<div class="right__form">
 					<div class="form-wrapper">
+
 						<div class="contact-heading">
-							<h1>Let`go with the algorithm A<span>*</span></h1>
+							<h1>Let`s go with algorithm A<span>*</span></h1>
 							<p class="text">We'll take the shortest route!</p>
 						</div>
 						<form action="forest.html" class="contact-form">
+
 							<div class="input-wrap">
 								<input class="contact-input" autocomplete="off" name="Start Point" type="text" required>
 								<label>Start Point</label>
 								<i class="icon fa-solid fa-location-crosshairs"></i>
 							</div>
 							<div class="input-wrap">
-								<input class="contact-input" autocomplete="off" name="End Point" type="text" required>
-								<label>End Point</label>
+								<input class="contact-input" autocomplete="off" name="Start Point" type="text" required>
+								<label>Start Point</label>
 								<i class="icon fa-solid fa-location-crosshairs"></i>
 							</div>
+
 							<div class="contact-buttons">
 								<button class="btn rest">
 									<span>
 										<i class="fa-solid fa-arrow-rotate-left"></i>
-									</span> restart
+									</span>restart
 								</button>
-								<button class="btn calk">let` go!</button>
+								<button class="btn calk">Let`s go</button>
 							</div>
+
 						</form>
 
 					</div>
 				</div>
+
 			</div>
 		</section>
 	</main>
+
+	
 
 </body>
 
