добавил адаптивную верстку на вторую страницу

--- a/html/forest.html
+++ b/html/forest.html
@@ -55,7 +55,11 @@
 		<section class="contact">
 			<div class="container">
 
-				<div class="left"></div>
+				<div class="left">
+					<div class="container-left">
+						<div class="moyCanvas"></div>
+					</div>
+				</div>
 				<div class="right">
 
 					<div class="form-wrapper">
