--- a/html/forest.html
+++ b/html/forest.html
@@ -26,8 +26,6 @@
 		</div>
 	</header>
 
-	<div class="logo" style="background-image: url(../img/logo.svg);"></div>
-
 	<section class="layers">
 		<div class="layers__container">
 			<div class="layers__item layer-1" style="background-image: url(../img/layer-1.jpg);"></div>
@@ -38,7 +36,7 @@
 				<div class="hero-content">
 					<h1>Natural Forest <span>HTML / CSS</span></h1>
 					<div class="hero-content__p">Creating a beautiful 3D website with a 'lens effect'</div>
-					<button class="button-start">Start Learning</button>
+					<a href="../index.html" class="button-start">Start Learning</a>
 				</div>
 			</div>
 
@@ -70,22 +68,22 @@
 						</div>
 						<form class="contact-form">
 
-							<div class="input-wrap">
-								<input class="contact-input" autocomplete="off" name="Start Point" type="text"  id="int_start">
+							<div class="input-wrap pointers-grid-st">
+								<input class="contact-input way-point" autocomplete="off" name="Start Point" type="text"  id="int_start">
 								<label>Start Point</label>
 								<i class="icon fa-solid fa-location-crosshairs"></i>
 							</div>
-							<div class="input-wrap">
-								<input class="contact-input" autocomplete="off" name="End Point" type="text"  id="int_end">
+							<div class="input-wrap pointers-grid-en">
+								<input class="contact-input way-point" autocomplete="off" name="End Point" type="text"  id="int_end">
 								<label>End Point</label>
 								<i class="icon fa-solid fa-location-crosshairs"></i>
 							</div>
-							<div class="input-wrap">
+							<div class="input-wrap x-y-c">
 								<input class="contact-input" autocomplete="off" name="Colum" type="text" required id="int_col">
 								<label>Column</label>
 								<i class="icon fa-solid fa-location-crosshairs"></i>
 							</div>
-							<div class="input-wrap">
+							<div class="input-wrap x-y-r">
 								<input class="contact-input" autocomplete="off" name="Row" type="text" required id="int_row">
 								<label>Row</label>
 								<i class="icon fa-solid fa-location-crosshairs"></i>
